force-app/main/default/objects/Process_Deactivation__c/fields/Deactivate_Process_Builder__c.field-meta.xml
<CustomField>
    <fullName>Deactivate_Process_Builder__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deactivate Process Builder</label>
    <type>Checkbox</type>
</CustomField>