force-app/main/default/objects/Process_Deactivation__c/fields/Deactivate_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Deactivate_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deactivate Trigger</label>
    <type>Checkbox</type>
</CustomField>