force-app/main/default/objects/Process_Deactivation__c/fields/Deactivate_validation_rules__c.field-meta.xml
<CustomField>
    <fullName>Deactivate_validation_rules__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deactivate validation rules</label>
    <type>Checkbox</type>
</CustomField>